# voxprose

./: .gitattributes  .gitignore  .gitmodules  AGENTS.md  AI_MEMORY.md  CHANGELOG.md  CLAUDE.md  HANDOVER.md  INTERNAL_TODO.md  LICENSE  MIGRATION_GUIDE.md  NOTICE.md  README.en.md  README.md  REVIEW.md  SKILL.md  VERSIONS.md  boot_debug.txt  boot_error.txt  build_all.sh  build_win.py  config.json  config.py  create_shortcut.ps1  diagnose_mic.py  entitlements.plist  fix_dmg_icon.py  fix_installed_app.sh  fix_pack_dmg.py  import_check.py  install.sh  main.py  main2.py  net_config.py  pack_dmg.sh  pack_release.sh  paths.py  post_build_fix.py  post_build_fix_installed.py  pyproject.toml  (+33 more)
actions/: builtins.py  dispatcher.py
assets/: icon.icns
audio/: auto_trigger.py  gain.py  mutex.py  recorder.py
docs/: BRANDING.md  DECISIONS.md  DEVELOPMENT.md  REFERENCES.md  RELEASE_VERIFICATION.md  UPSTREAM.md  mac-mainline-absorption-analysis.md
hotkey/: listener.py
llm/: __init__.py  base.py  claude.py  deepseek.py  gemini.py  minimax.py  ollama.py  openai_llm.py  openrouter.py  prompts.py  qwen.py
memory/: manager.py
output/: injector.py
scripts/: pre_build_check.py
stats/: tracker.py
stt/: __init__.py  base.py  cuda_check.py  gemini_stt.py  groq_whisper.py  hallucination_filter.py  language.py  local_whisper.py  mlx_whisper.py  openrouter_stt.py  subprocess_whisper.py
tests/: test_app_startup.py  test_audio_gain.py  test_brand_and_charset_guard.py  test_brand_assets.py  test_broad_except_logging.py  test_calculator.py  test_ci_workflow.py  test_config.py  test_cuda_check.py  test_diagnostics.py  test_foreground.py  test_foreground_detection_countdown.py  test_gemini_stt.py  test_llm_config_keys.py  test_llm_prompts.py  test_log_rotation.py  test_manual_audio_vad_check.py  test_manual_foreground_countdown_check.py  test_manual_ui_check_contract.py  test_menu_window_actions.py  test_mic_test_countdown.py  test_no_bare_except.py  test_openrouter_fallback.py  test_openrouter_stt.py  test_permissions.py  test_provider_timeouts.py  test_recording_mutex.py  test_release_zip.py  test_settings_soul_save.py  test_smoke.py  test_soul_page_auto_scenario.py  test_soul_rules.py  test_stt_engine_dispatch.py  test_stt_hallucination_filter.py  test_stt_language_selection.py  test_stt_transcribe_params.py  test_subprocess_warmup.py  test_tray_manager_actions.py  test_upstream_check.py  test_vad_factory.py  (+5 more)
tools/: check_dependency_freshness.py  check_upstream_updates.py  doctor.py  download_models.py  get_portable_python.ps1  launcher.cs  (+1 more)
(+74 files in other folders)
