[project]
name = "voxprose"
version = "3.3.0"
description = "聲成文 VoxProse — Windows-only fork of jfamily4tw/voicetype4tw-mac (VoiceType4TW / 嘴炮輸入法, win-stable), maintained by SanHsien"
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = { text = "MIT" }

# NOTE: this file exists to give the project standard Python packaging
# metadata and a pytest configuration home — it does NOT replace the actual
# install path. Real dependency installation is still driven by
# requirements-win.txt (+ requirements-cuda-win.txt on machines with an
# NVIDIA GPU), which setup_win.bat / release_win.ps1 depend on directly.
# Keep [project.dependencies] empty/minimal; do not migrate the packaging
# scripts to `pip install -e .` without updating AGENTS.md/DEVELOPMENT.md.
dependencies = []

[project.optional-dependencies]
# pyyaml: 目前只被 tests/test_ci_workflow.py（驗證 .github/workflows/*.yml）
# 用到直接 import；requirements-win.txt 透過 faster-whisper -> ctranslate2/
# huggingface_hub transitively 也會裝到，但測試相依不該靠轉手依賴僥倖存在，
# 這裡明確列出（2026-07-23）。
dev = ["pytest>=7.0", "pyyaml>=6.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
norecursedirs = ["tests/manual", ".git", "build", "dist", ".runtime", "bundled_models", "venv", ".venv"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
